Fixed some alignment bugs

--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -2390,7 +2390,7 @@ input, select, textarea {
 			text-decoration: none;
 			display: inline-block;
 			margin: 0 0 1.6875em 0;
-			padding: 0.35em 0 0 0.35em;
+			padding: 0.35em 0 0 3.5em;
 			position: relative;
 			vertical-align: top;
 			width: 48%;
